# proyecto-compilador

./: CMakeLists.txt  README.md  asignar.cpp  ciclo.cpp  cicloFor.cpp  cicloFor.h  declarar.cpp  declarar.h  expresion.cpp  expresion.h  expresionMatematica.cpp  expresionMatematica.h  expressionEvaluator.cpp  expressionEvaluator.h  expressionsTest.txt  ifElse.cpp  ifElse.h  instruccion.h  lexicalAnalyzer.cpp  lexicalAnalyzer.h  main.cpp  print.cpp  print.h  read.cpp  read.h  sintacticAnalyzer.cpp  sintacticAnalyzer.h  syntax.cpp  tablaDeValores.cpp  tablaDeValores.h  testFile.txt  testFile2.txt  util.cpp  util.h
examples/: distancia.txt  promedio.txt  saludo.txt
src/: asignar.h  ciclo.h  expresion.cpp  expresionMatematica.cpp  lexicalAnalyzer.cpp  lexicalAnalyzer.h  main.cpp  print.cpp  read.h  sintacticAnalyzer.cpp
tests/: testFile3.txt
